# dobato

./: README.md  pyproject.toml
discord_webhook/: __init__.py  notify.py
dobato/: __init__.py  __main__.py  dobato.py  notifier.py  notify.py
