[tool.poetry]
name = "dobato"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@klis.tsukuba.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
